--- a/task5/task5.Rmd
+++ b/task5/task5.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "task5"
 author: "Deivydas Sinkevičius"
-date: '2016 m rugsėjis 25 d '
+date: '2016 m rūgsėjis 25 d '
 output: html_document
 ---
 
@@ -10,49 +10,46 @@ knitr::opts_chunk$set(echo = TRUE)
 ```
 
 Didžioji dalis nusirašyta nuo Agnės, Orintos, Simonos ir Sandros darbo, taip pat nuo Raigardo
+
 ##Task 5. Random variable challenge
 
 Tarkime, kad ridenami trys taisyklingi standartiniai lošimo kauliukai. Fiksuojama iškritusių akučių suma, pažymėkime šį atsitiktinį dydį $S$.
 
-   1.  Atlikite Monte-Carlo modeliavimą sugeneruodami $S$ atsitiktinio dydžio nepriklausomas realizacijas $S_1$, $S_2$, ..., $S_n$. Čia $n=10^5$.
-   
+    Atlikite Monte-Carlo modeliavimą sugeneruodami $S$ atsitiktinio dydžio nepriklausomas realizacijas $S_1$, $S_2$, ..., $S_n$. Čia $n=10^5$.
+    
 ```{r}
 n<- 10^5
 x1=sample(1:6, n, replace=TRUE)
 x2=sample(1:6, n, replace = TRUE)
 x3=sample(1:6, n, replace = TRUE)
 S<- x1+x2+x3
-
 ```
 
-  2.  Raskite teorinį $S$ skirstinį, t.y. kiekvienai galimai $S$ reikšmei raskite pasirodymo tikimybę.
-  
+    Raskite teorinį $S$ skirstinį, t.y. kiekvienai galimai $S$ reikšmei raskite pasirodymo tikimybę.
+    
 ```{r}
+#install.packages('prob')
+library("prob")
 St <- rolldie(3, nsides = 6, makespace = TRUE)
 St <- addrv(St, sum = X1 + X2 + X3)
 S_teor <- marginal(St, vars="sum")
 S_teor
-
 ```
 
-  3.   Iš sugeneruotos imties, padarykite santykinių dažnių lentelę ir gautas reikšmes palyginkite su teorinėmis tikimybėmis. Palyginimui pateikite grafiką ir lentelę, taip, kad būtų patogu lyginti gautus rezultatus.
-  
+    Iš sugeneruotos imties, padarykite santykinių dažnių lentelę ir gautas reikšmes palyginkite su teorinėmis tikimybėmis. Palyginimui pateikite grafiką ir lentelę, taip, kad būtų patogu lyginti gautus rezultatus.
+    
 ```{r}
 cbind(as.data.frame(table(S)/n), S_teor)
-
 ```
 Teorinės tikimybės pateiktos dešinėje
 ```{r}
 plot(table(S)/n, xlab="Suma", ylab="Tikimybė")
 points(S_teor, col=2)
 legend(3, 0.12, c("teorine", "empirine"), lty = c(1, 1), col = c(2, 1))
-
 ```
 
+    Suskaičiuokite teorinį $S$ vidurkį ir dispersiją. Padarykite grafikus, kuriuose matytųsi, kaip didėjant $n$ minėtų charakteristikų įvertiniai artėja į teorines reikšmes.
 
-   4. Suskaičiuokite teorinį $S$ vidurkį ir dispersiją. Padarykite grafikus, kuriuose matytųsi, kaip didėjant $n$ minėtų charakteristikų įvertiniai artėja į teorines reikšmes.
-   Teorinis vidurkis ir dispersija:
-   
 ```{r}
 ES <- sum(S_teor$probs * S_teor$sum)
 varS <- sum(S_teor$probs * (S_teor$sum-ES)^2)
