--- a/task7/CRT/CRT.Rmd
+++ b/task7/CRT/CRT.Rmd
@@ -9,9 +9,9 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-Generuojame $n$ atsitiktinių dydžių turinčių Beta skirstinį su parametrais $\alpha=\beta=0.5$ Iš šių atsitiktinių dydžių suskaičiuojamas aritmetinis vidurkis. 
+Generuojame $n$ atsitiktinių dydžių turinčių Beta skirstinį su parametrais $\alpha=\beta=0.5$ Iš šių atsitiktinių dydžių suskaičiuojamas aritmetinis vidurkis.
 
-**Kaip atrodo aritmetinio vidurkio tankis, kai $n=100$?** 
+**Kaip atrodo aritmetinio vidurkio tankis, kai $n=100$? ** 
 
 Sugeneruojame imtį, kurią sudaro 100000 aritmetinių vidurkių ir pavaizduojame šios imties tankį.
 ```{r}
@@ -24,3 +24,4 @@ plot(density(vid), main="Aritmetinio vidurkio tankis")
 grid()
 ```
 
+Nurašyta nuo simona1234
